crates/busx/tests/snapshots/tui_pty__interface_loaded_sub_80x20.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 280
expression: screen
---
org.busx.Test > /org/busx/Test/sub > org.busx.Test
┌▶ methods───────────────────────────────────────────────┐┌actions─────────────┐
│TakeHints          a{sv}                                ││Call                │
│Join               as                                   ││Listen              │
│BumpVolume                                              ││                    │
│MakeFd                                                  ││                    │
└────────────────────────────────────────────────────────┘│                    │
┌properties──────────────────────────────────────────────┐│                    │
│counts  a{uu}  {1: 10, 2: 20}                           ││                    │
│hints   a{sv}  {"urgency": <y 1>}                       ││                    │
│name    s      "busx-test"                              ││                    │
│volume  d      0                                        ││                    │
└────────────────────────────────────────────────────────┘│                    │
┌signals─────────────────────────────────────────────────┐│                    │
│                                                        ││                    │
│                                                        ││                    │
│                                                        ││                    │
│                                                        ││                    │
└────────────────────────────────────────────────────────┘└────────────────────┘
Tab column · ↑↓ select · Enter open · r refresh · Esc back · q quit · ? help
