crates/busx/tests/snapshots/tui_pty__listen_method_armed.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
org.busx.Test > /org/busx/Test > org.busx.Test > Result
┌listen org.busx.Test.TakeHints────────────────────────────────────────────────┐
│listening…                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · ←→ scroll · c copy-as · y copy · Esc back/stop · q quit · ? help
