crates/busx/tests/snapshots/tui_pty__mouse_click_drills_into_service.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
org.busx.ScrollA
┌Objects───────────────────────────────────────────────────────────────────────┐
│/                                                                             │
│/org                                                                          │
│/org/busx                                                                     │
│/org/busx/Test                                                                │
│/org/busx/Test/sub                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · Esc back · q quit · ? help
