crates/busx/tests/snapshots/tui_pty__mouse_scroll_on_service_list.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
                                                                
┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollC                       <PID>  <PROC>│
│org.busx.ScrollD                       <PID>  <PROC>│
│org.busx.ScrollE                       <PID>  <PROC>│
│org.busx.ScrollF                       <PID>  <PROC>│
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
