crates/busx/tests/snapshots/tui_pty__objects_list_click_scrolla_80x20.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 704
expression: screen
---
org.busx.ScrollA
┌Objects───────────────────────────────────────────────────────────────────────┐
│/                                                                             │
│/org                                                                          │
│/org/busx                                                                     │
│/org/busx/Test                                                                │
│/org/busx/Test/sub                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · Esc back · q quit · ? help
