crates/busx/tests/snapshots/tui_pty__objects_list_test_filter_100x28.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 173
expression: screen
---
org.busx.Test
┌Objects───────────────────────────────────────────────────────────────────────────────────────────┐
│/                                                                                                 │
│/org                                                                                              │
│/org/busx                                                                                         │
│/org/busx/Test                                                                                    │
│/org/busx/Test/sub                                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · Esc back · q quit · ? help
