crates/busx/tests/snapshots/tui_pty__objects_list_test_filter_64x12.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 235
expression: screen
---
org.busx.Test
┌Objects───────────────────────────────────────────────────────┐
│/                                                             │
│/org                                                          │
│/org/busx                                                     │
│/org/busx/Test                                                │
│/org/busx/Test/sub                                            │
│                                                              │
│                                                              │
│                                                              │
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · Esc back · q qui
